--- a/index.html
+++ b/index.html
@@ -58,5 +58,16 @@
     }
     var cityLayer = L.geoJSON(cities, layerProcessing).addTo(mymap);
 </script>
+<script>
+    var path = [[44.7319, -93.2177],[45.58499766, -95.9083297],[47.481018, -94.888229],[45.2333324, -93.288165514],
+        [48.191063, -93.806569],[46.827316, -95.848160],[43.618664192, -95.591164302],[44.56247, -92.5338],
+        [46.786938, -92.098195],[44.314439, -94.459302],[47.771163582, -96.604830914],[46.61, -93.41],[44.7319, -93.2177]];
+
+    var line={
+        "weight": 3,
+        "color": "#795aff"
+    }
+    L.polyline(path, line).addTo(mymap);
+</script>
 </body>
 </html>
